# gosg

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  default.nix  go.mod  go.sum  package.go
audio/: package.go
audio/openal/: audiosystem.go
cmd/: Makefile
cmd/data/models/: f16.model
cmd/demo/: Makefile  Makefile.osx  main.go
cmd/modelimporter/: CMakeLists.txt  Makefile  main.cpp  model.pb.cc  model.pb.h
cmd/modeltool/: main.go  togltf.go
core/: aabb.go  aabb_test.go  algebra.go  application.go  audiosystem.go  camera.go  cameracontrol.go  component_registry.go  cullcomponents.go  descriptors.go  framebuffer.go  imgui_renderer.go  imguisystem.go  input_types.go  inputmanager.go  light.go  material.go  mesh.go  model.go  model_gltf.go  node.go  package.go  physics.go  pipeline.go  pipeline_test.go  platform.go  proceduralutils.go  proceduralutils_test.go  program.go  projection.go  rendersystem.go  resourcemanager.go  scene.go  scene_loader.go  scene_yaml.go  scenemanager.go  shadow.go  state.go  texture.go  timermanager.go  (+3 more)
gpu/: gpu.go
imgui/: package.go
imgui/dearimgui/: gosg_imgui.cpp  gosg_imgui.h  uisystem.go
physics/: package.go
physics/bullet/: physicssystem.go
protos/: codegen.sh  model.pb.go  model.proto  package.go  state.pb.go  state.proto
render/: package.go
render/metal/: rendersystem.go
render/opengl/: framebuffer.go  imgui.go  mesh.go  package.go  program.go  rendersystem.go  shader.go  state.go  texture.go  uniform.go  window.go
resource/: package.go
resource/filesystem/: resourcesystem.go
(+57 files in other folders)
